bplm/sfdx-src/main/default/objects/Business_Process_Step_Task_Mapping__c/Business_Process_Step_Task_Mapping__c.object-meta.xml
<CustomObject>
    <label>Business Process Step Task Mapping</label>
    <nameField>
        <displayFormat>BPSTM-{00000000}</displayFormat>
        <label>Business Process Step Task Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Process Step Task Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>