bplm/sfdx-src/main/default/objects/Business_Process_Step_Task_Mapping__c/fields/Business_Process_Step__c.field-meta.xml
<CustomField>
    <fullName>Business_Process_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Process Step</label>
    <referenceTo>Business_Process_Step__c</referenceTo>
    <relationshipLabel>Business Process Step Task Mappings</relationshipLabel>
    <relationshipName>Business_Process_Step_Task_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>