bplm/sfdx-src/main/default/objects/Business_Process_Step_Task_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Process_Step__c</columns>
    <columns>Business_Process_Task__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>